--- a/styles/bio.css
+++ b/styles/bio.css
@@ -337,6 +337,15 @@
 }
 /* Tablet breakpoint*/
 @media screen and (min-width: 768px) and (max-width: 1279px) {
+  * {
+    font-family: "avenir_next_lt_proregular", sans-serif;
+    font-size: 16px;
+  }
+  body {
+    margin: 0px;
+    padding: 0;
+    border: none;
+  }
   /* Navigation*/
   nav {
     width: 100%;
@@ -534,17 +543,19 @@
     background-color: #E1E1E1;
     opacity: 50%;
     border-radius: 50%;
-    width: 2.25rem;
-    height: 2.25rem;
-    border: 0.25rem solid black;
+    width: 3rem;
+    height: 3rem;
+    margin: 0;
   }
   .user__icon--container {
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50%;
     position: relative;
     bottom: 28%;
-    padding: 2rem;
+    padding-left: 2rem;
+    padding-right: 3rem;
+    padding-bottom: 2rem;
   }
   .user__icon {
     height: 4rem;
@@ -598,12 +609,16 @@
   }
   .comment__button {
     height: 40px;
-    width: 100%;
+    width: 150px;
     color: white;
     background-color: #323232;
     margin-left: 0.75rem;
     margin-top: 1rem;
     border-radius: 4px;
+    float: right;
+  }
+  .comment__button:hover {
+    background-color: #000000;
   }
   /*comment section*/
   /* SHOWS Section */
@@ -985,6 +1000,7 @@ body {
     flex-direction: row;
     width: 100%;
     position: relative;
+    border-bottom: 1px solid #E1E1E1;
   }
   .add__comment p {
     width: 2.25rem;
@@ -1025,6 +1041,10 @@ body {
     margin-left: 0.75rem;
     margin-top: 1rem;
     border-radius: 4px;
+    margin-bottom: 3rem;
+  }
+  .comment__button:hover {
+    background-color: #000000;
   }
   .form__username {
     height: 2.25rem;
@@ -1053,6 +1073,9 @@ body {
     flex-wrap: wrap;
     border-bottom: 1px solid #E1E1E1;
   }
+  .saved__comment--container {
+    display: flex;
+  }
   .user__icon--blank {
     background-color: #E1E1E1;
     opacity: 50%;
@@ -1060,14 +1083,17 @@ body {
     width: 2.25rem;
     height: 2.25rem;
     margin-top: 2rem;
+    order: 0;
   }
   .comment__creator {
     margin: 0;
     padding-top: 2rem;
     padding-left: 0.75rem;
+    order: 1;
   }
   .comment__text {
     padding-left: 3rem;
+    order: 3;
   }
   .date__text {
     flex: 2 1 auto;
@@ -1078,6 +1104,9 @@ body {
     color: #AFAFAF;
     font-size: 0.813rem; /*13px*/
     padding-top: 2rem;
+    float: right;
+    order: 2;
+    position: absolute;
   }
   /*Comment Section */
   /* Footer Section */
