--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,7 +1,21 @@
+body {
+  margin: 0;
+}
+
+* {
+  margin: 0;
+}
+
 @media screen and (min-width: 1280px) {
   /* Navigation */
   nav {
     width: 100%;
+  }
+  body {
+    margin: 0;
+  }
+  * {
+    margin: 0;
   }
   .navsection {
     display: flex;
@@ -235,6 +249,110 @@
     border: none;
   }
   /*Shows Section */
+  /*comment section*/
+  .add__comment {
+    display: flex;
+    justify-content: center;
+  }
+  .add__comment p {
+    margin-bottom: 4px;
+    color: #AFAFAF;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
+  .comment__section h1 {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    font-weight: 700;
+    padding-left: 3rem;
+  }
+  .user__icon--container {
+    border-radius: 50%;
+    padding-left: 2rem;
+    padding-right: 1rem;
+    padding-top: 2.5rem;
+  }
+  .user__icon {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+  }
+  .form__container {
+    width: 33rem;
+  }
+  .form__username {
+    height: 48px;
+    border-radius: 4px;
+    width: 100%;
+    position: inherit;
+    border: 1px solid #E1E1E1;
+    padding: 1rem;
+    box-sizing: border-box;
+  }
+  .form__username:active, .form__username:focus {
+    border: 1px solid #323232;
+    outline: none;
+    background-color: #ffffff;
+  }
+  .form__username:invalid {
+    border: 1px solid red;
+  }
+  .comment__textbox {
+    width: 100%;
+    border: 1px solid #E1E1E1;
+    height: 96px;
+    border-radius: 4px;
+    padding: 1rem;
+    box-sizing: border-box;
+  }
+  .comment__textbox:active, .comment__textbox:focus {
+    border: 1px solid #323232;
+    outline: none;
+    background-color: #ffffff;
+  }
+  .comment__textbox:invalid {
+    border: 1px solid red;
+  }
+  .comment__button {
+    height: 40px;
+    width: 150px;
+    color: white;
+    background-color: #323232;
+    margin-left: 0.75rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 4px;
+    float: right;
+  }
+  .user__icon--blank {
+    background-color: #E1E1E1;
+    opacity: 50%;
+    border-radius: 50%;
+    width: 48px;
+    height: 48px;
+    margin: 0;
+    order: 0;
+    margin-top: 2rem;
+    box-sizing: border-box;
+  }
+  .comment__card {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    width: 33rem;
+    padding: 3rem;
+    margin-right: 0;
+  }
+  .saved__comment--container {
+    width: 100%;
+    margin: 0;
+    align-self: center;
+    justify-self: center;
+  }
+  /*comment section*/
   /*footer section */
   .footer__container {
     display: flex;
@@ -547,6 +665,7 @@
     height: 48px;
     margin: 0;
     order: 0;
+    margin-top: 2rem;
   }
   .user__icon--container {
     width: 3rem;
@@ -576,6 +695,13 @@
     width: 100%;
     border-bottom: 1px solid #E1E1E1;
   }
+  .add__comment p {
+    margin-bottom: 4px;
+    color: #AFAFAF;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+  }
   .form__container {
     width: 100%;
     padding-right: 3rem;
@@ -583,8 +709,11 @@
   .form__username {
     height: 48px;
     width: 100%;
-    position: inherit;
+    border-radius: 4px;
+    width: 100%;
     border: 1px solid #E1E1E1;
+    padding: 1rem;
+    box-sizing: border-box;
   }
   .form__username:active, .form__username:focus {
     border: 1px solid #323232;
@@ -600,6 +729,8 @@
   .comment__textbox {
     width: 100%;
     border: 1px solid #E1E1E1;
+    padding: 1rem;
+    box-sizing: border-box;
   }
   .comment__textbox:active, .comment__textbox:focus {
     border: 1px solid #323232;
@@ -1048,6 +1179,8 @@ body {
     margin-left: 0.75rem;
     width: 100%;
     border: 1px solid #E1E1E1;
+    padding: 1rem;
+    box-sizing: border-box;
   }
   .comment__textbox:active, .comment__textbox:focus {
     border: 1px solid #323232;
@@ -1085,6 +1218,8 @@ body {
     margin-right: 0.75rem;
     margin-bottom: 0.75rem;
     border: 1px solid #E1E1E1;
+    padding: 1rem;
+    box-sizing: border-box;
   }
   .form__username:active, .form__username:focus {
     border: 1px solid #323232;
