Need to finish desktop bio page

--- a/styles/bio.css
+++ b/styles/bio.css
@@ -345,6 +345,7 @@ body {
     width: 33rem;
     padding: 3rem;
     margin-right: 0;
+    height: auto;
   }
   .saved__comment--container {
     width: 100%;
